--- a/src/pages/features/features.css
+++ b/src/pages/features/features.css
@@ -90,3 +90,13 @@ margin-bottom: 8px;
     width:4rem;
     
   }
+  .user-profile{
+    box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.2) ;
+  }
+  .user-bio{
+    margin-left:2.5rem;
+  }
+  .edit-profile-btn{
+    margin-left:2.5rem;
+    margin-bottom:1rem
+  }
