--- a/src/components/components.css
+++ b/src/components/components.css
@@ -43,3 +43,27 @@
 input::placeholder {
     font: 1.25rem/3 sans-serif;
 }
+.header{
+    display:flex;
+    align-items:center;
+    color:#9D9D9D;
+}
+
+.heading{
+    margin-left: 2rem;
+}
+.search-container{
+    display: flex;
+    border: 2px solid;
+    width: 20%;
+    border-radius:.7rem;
+    background-color:white;
+    padding:0.5rem;
+    margin-left:30rem
+
+}
+.search-bar{
+    border:none;
+    outline:none;
+    padding-left:1rem;
+}
