--- a/src/pages/features/features.css
+++ b/src/pages/features/features.css
@@ -1,9 +1,12 @@
 .profile-pic{
     width: 50px;
     border-radius: 50%;
-    height: 40px;
-    margin-top: 20px;
-    position: relative;  
+    height: 60px;
+    /* position: relative;   */
+    /* display: flex;
+    margin-left:12rem; */
+    /* top:60px; */
+
 }
 .profile-details{
     margin-top:2px
@@ -11,19 +14,42 @@
 .profile-username{
     margin-top:12px
 }
+/* 
+.profile-info{
+  display: flex;
+flex-direction: column;
+  
+} */
+
 .post-container{
-    display: flex;
-    justify-content: space-evenly;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
   
 }
 .post-list{
-    list-style: none;
-    box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.2) ;
+  list-style: none;
+    box-shadow: 0px 7px 29px 0px rgba(143, 127, 193, 0.2) ;
     text-align: center;
-    width:360px;
-    border-radius: 0.5rem;
-   
-    
+    width:600px;
+    border-radius: 0.5rem;   
+}
+
+.post-list.with-media{
+    list-style: none;
+    box-shadow: 0px 7px 29px 0px rgba(143, 127, 193, 0.2) ;
+    text-align: center;
+    width:600px;
+    height:439px;
+    border-radius: 0.5rem;   
+}
+
+.post-list.without-media{
+  list-style: none;
+  box-shadow: 0px 7px 29px 0px rgba(143, 127, 193, 0.2) ;
+  text-align: center;
+  width:600px;
+  height:177px;
+  border-radius: 0.5rem;   
 }
 p{
 overflow-wrap: normal;
@@ -38,51 +64,64 @@ overflow-wrap: normal;
 .btns{
     display: flex;
 font-size:1rem;
-margin-left:1rem;
-/* justify-content: space-evenly; */
-gap:10px;
+margin-left:3.5rem;
+/* justify-content: space-around; */
+gap:6rem;
 margin-bottom: 8px;
+color:grey
 }
 
+.rest-btns{
+  display: flex;
+  font-size:1rem;
+  /* margin-left:3.5rem; */
+  justify-content: space-around;
+  gap:6rem;
+  margin-bottom: 8px;
+  color:grey
+}
+
+.edit-delete{
+  display: flex;
+  gap:6rem;
+  /* justify-content: space-around; */
+}
 .sort-btns{
-    text-align: center;
-    display: flex;
-    gap:8px;
-    justify-content: center;
-    box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.2) ;
-    height:12vh;
-    width:360px;
-  
+    margin-left:8rem;
 
 }
 #sort-btn{
    
     margin-top: 20px;
-    border:none;
+    border: 1px solid;
     background-color: white;
-    font: 1.25rem/3 sans-serif;
+    font: 1rem sans-serif;
     cursor: pointer;
+    width: 11rem;
+    border-radius: 1rem;
 }
 #trending-btn{
    
     margin-top: 20px;
-    border:none;
+    border: 1px solid;
     background-color: white;
-    font: 1.25rem/3 sans-serif;
+    font: 1rem sans-serif;
     cursor: pointer;
-    border-left:1px solid;  
-    left: 50%;
+    width: 11rem;
+    border-radius: 1rem;
    
 }
 .added-post-card {
-    height: 100px; 
-    width: 360px;
+    height: 40px; 
+    width: 600px;
     border: none;
+    box-shadow: 0px 7px 29px 0px rgba(143, 127, 193, 0.2) ;
+    /* box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.2) ; */
+    padding:8px
   }
 
   .add-post-container{
-    box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.2) ;
-    width:360px
+    width:600px
   }
   #post-btn{
     margin-bottom:5px;
@@ -99,4 +138,43 @@ margin-bottom: 8px;
   .edit-profile-btn{
     margin-left:2.5rem;
     margin-bottom:1rem
+  }
+
+  .post-input-main{
+    display: flex;
+    flex-direction: column;
+    gap:8px;
+    position: relative;
+    right:30rem;
+    bottom: 14rem; 
+     width:300px;
+     gap:2.5rem;
+     border:1px solid;
+     border-radius: 1.5rem;
+     /* box-shadow:0px 7px 29px 0px rgba(100, 100, 111, 0.2) ; */
+     padding:12px ;
+     background: #edf2f6;
+     z-index: 22;
+  }
+  #file-upload {
+    display: none;
+  }
+
+  #input-text{
+    height:10vh;
+    width: 20vh;
+   margin:8px;
+  }
+  .save-cancel{
+    margin:8px;
+  }
+  .cancel-btn{
+    margin-left:5px;
+  }
+
+  #file-label{
+    border:1px solid black;
+    padding:2px;
+    color:#3498db;
+    background-color:white;
   }
