--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -8,23 +8,34 @@
   align-items: center;
   border:1px solid ;
   border-radius:1rem;
-  width:600px
+  width:600px;
+  height: 270px;
+
 }
 .modal-form-container{
-    background: rgba(255, 255, 255, 0.75);
-    width: 100%;
-    /* position: absolute; */
-    top: 5rem;
-    
-    height: 100%;
-    z-index: 2;
-    transition: background ease 0.3s;
-    /* display: flex; */
-}
-.profileDetails{
     display: flex;
     flex-direction: column;
+    gap:8px;
+    position: relative;
+    bottom: 18rem; 
+     width:300px;
+     gap:2.5rem;
+     border:1px solid;
+     border-radius: 1.5rem;
+     /* box-shadow:0px 7px 29px 0px rgba(100, 100, 111, 0.2) ; */
+     padding:12px ;
+     background: #edf2f6;
+     z-index: 22;
+     transition: background ease 0.3s;
+ } 
+.profileDetails{
+    padding:10px
 }
 .profileInput{
     width:16rem
+}
+.save-cancel-btn{
+    margin-top:10px;
+    margin-left:90px
+    
 }
