--- a/src/pages/Auth/Auth.css
+++ b/src/pages/Auth/Auth.css
@@ -14,12 +14,33 @@
     padding-left:7rem;
     
 }
+.signUp-container{
+    display: flex; 
+   flex-direction: column; 
+   box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.2) ;
+ 
+   justify-content: center;
+   padding-left:13rem;
+   
+}
 .auth-container input{
+    width: 15rem;
+}
+.signUp-container input{
     width: 15rem;
 }
 .login-heading{
     padding-left:1.3rem
-
+}
+.signUp-main{
+    width:40%;
+    /* display: flex; */
+    justify-content: center;
+    margin-top:4rem;
+    margin-left:16rem;
+}
+.signUp-heading{
+    padding-left:2.3rem
 }
 .details{
     display: flex;
@@ -36,6 +57,16 @@
     display: flex;
     flex-direction: column;
 }
+.fName{
+
+    display: flex;
+    flex-direction: column;
+}
+.lName{
+    display: flex;
+    flex-direction: column;
+}
+
 #login-btn{
     margin-bottom: 12px;
     width:15rem;
@@ -43,4 +74,6 @@
 
 .account-btn{
     margin-bottom: 12px;
+    width: 15rem;
+    margin-top:2rem;
 }
