--- a/src/pages/features/features.css
+++ b/src/pages/features/features.css
@@ -160,6 +160,9 @@ color:grey
     display: none;
   }
 
+  #svg-icon{
+    font-size: small;
+  }
   #input-text{
     height:8vh;
     font-size: medium;
